# covid19br-py

./: .pypirc  README.html  README.md  covid19br  pyproject.toml
.github/workflows/: tests.yml  workflow.yml
covid19br-py/: pyvenv.cfg
src/covid19br/: __init__.py  utils.py
src/covid19br.egg-info/: PKG-INFO  SOURCES.txt
tests/: test_*.py  test_downloads.py
