# pyproject.toml

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "covid19br"
version = "0.0.1"
authors = [
  { name="Fabio N. Demarqui", email="fndemarqui@est.ufmg.br" },
]
description = "Set of functions to import COVID-19 pandemic data into R. The Brazilian COVID-19 data, obtained from the official Brazilian repository at <https://covid.saude.gov.br/>, is available at the country, region, state, and city levels. The package also downloads world-level COVID-19 data from Johns Hopkins University's repository. COVID-19 data is available from the start of follow-up until to May 5, 2023, when the World Health Organization (WHO) declared an end to the Public Health Emergency of International Concern (PHEIC) for COVID-19."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy",
    "pandas",
    "pyarrow",
    "requests"
]

[project.urls]
Homepage = "https://github.com/fndemarqui/covid19br-py"
Issues = "https://github.com/fndemarqui/covid19br-py/issues"

